<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activity_detail_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/detail_task"
            android:textColor="@color/title_task"
            android:textSize="40dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/viewTitle"
                android:layout_width="95dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/title"
                android:textColor="@color/font"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editTitle"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_detail_task"
                android:fontFamily="@font/amaranth" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/viewCourse"
                android:layout_width="95dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:text="@string/course"
                android:fontFamily="@font/andika_new_basic"
                android:textColor="@color/font"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editCourse"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:background="@drawable/bg_detail_task"
                android:fontFamily="@font/amaranth" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/viewDate"
                android:layout_width="95dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/date"
                android:textColor="@color/font"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editDate"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_detail_task"
                android:fontFamily="@font/amaranth" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/viewTime"
                android:layout_width="95dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/time"
                android:textColor="@color/font"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editTime"
                android:layout_width="400dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="18sp"
                android:background="@drawable/bg_detail_task"
                android:fontFamily="@font/amaranth" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/viewDesc"
                android:layout_width="120dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/andika_new_basic"
                android:text="@string/desc"
                android:textColor="@color/font"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editDesc"
                android:layout_width="400dp"
                android:layout_height="90dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/bg_detail_task"
                android:fontFamily="@font/amaranth"
                android:textSize="18sp" />
        </RelativeLayout>



    </LinearLayout>

</LinearLayout>